<resources>
    <string name="app_name">Project5</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="weight">Weight:</string>
    <string name="height">Height:</string>
    <string name="bmi">BMI:</string>
    <string name="inWeight">enter weight</string>
    <string name="inHeight">enter height</string>
    <string name="rb1text">Lbs/in</string>
    <string name="rb2text">Kg/m</string>
    <string name="calcBMI">Calculate BMI</string>
    <string name="advice">Get Advice</string>
    <string name="bmiCalc">BMI Calculator</string>
    <string name="advice_title">Advice based on BMI</string>
    <string name="normal">Normal</string>
    <string name="advice_image">advice image</string>
</resources>
