<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/textViewW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        android:text="@string/weight"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:text="@string/height"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewW" />

    <TextView
        android:id="@+id/textViewBMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/bmi"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="@+id/textViewH"
        app:layout_constraintTop_toBottomOf="@+id/textViewH" />

    <EditText
        android:id="@+id/enterWeight"
        android:layout_width="218dp"
        android:layout_height="36dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="44dp"
        android:autofillHints="weight"
        android:ems="10"
        android:hint="@string/inWeight"
        android:inputType="numberDecimal"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterHeight"
        android:layout_width="218dp"
        android:layout_height="36dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="44dp"
        android:ems="10"
        android:hint="@string/inHeight"
        android:inputType="numberDecimal"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterWeight"
        android:autofillHints="height" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="410dp"
        android:layout_height="90dp"
        android:checkedButton="@+id/lbsBtn"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBMI">

        <RadioButton
            android:id="@+id/lbsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="68dp"
            android:text="@string/rb1text" />

    <RadioButton
        android:id="@+id/kgBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="28dp"
        android:text="@string/rb2text"
        app:layout_constraintEnd_toEndOf="@+id/enterHeight"
        app:layout_constraintTop_toBottomOf="@+id/textViewBMI" />

    <Button
        android:id="@+id/calcBMI"
        android:layout_width="276dp"
        android:layout_height="49dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="64dp"
        android:text="@string/calcBMI"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/getAdvice"
        android:layout_width="276dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:text="@string/advice"
        app:layout_constraintStart_toStartOf="@+id/calcBMI"
        app:layout_constraintTop_toBottomOf="@+id/calcBMI" />

</androidx.constraintlayout.widget.ConstraintLayout>
